MODORDERS-1265. Fix part of unit tests